# epistemic-rag-agent

./: .env  .gitignore  LICENSE  README.md  main.py  pyproject.toml
setup/: database_setup.sql  fill_database.py
src/Agent/: agent_interface.py
src/Config/: config.py
src/LLM/: llm_interface.py  promp_templates.py
src/rag_engine/: docsource_connector.py  embedder.py  extraction_formatter.py  fuse.py  query_tool.py  rerank.py  sparse_retriever.py
